Ensure that opening a runtime sheet occurs on the primary instance for the identifier assigned to the new sheet. (#1412)